# mserfurt

./: .arrive-version  .gitignore  AGENTS.md  README.md  pyproject.toml  run_annotation_workbench.sh  run_evolution.sh  run_reviewed_catalog_pipeline.sh  run_scribesim.sh  run_tuning.sh  run_weather.sh  run_xl.sh  snapshot.sh  transcribe_words.py
.arrive/: auth.json  beacon-leases.json  work-context.json  work-events.jsonl
.cursor/: hooks.json
anchors/: README.md  assemble_summary.json  labels.tsv
arrive/: implementation-plan.yaml  registry.yaml  system.yaml
diagnostics/: README.md
docs/: scribehand-mac-runbook-agent.md  scribehand-mac-runbook.md  scribehand-orchestration.env.example  scribehand-orchestration.yaml  scribesim-project-brief.md  scribesim-solution-intent.md  weather-project-brief.md  weather-solution-intent.md  xl-project-brief.md  xl-solution-intent.md
output-evo-deep-char-preview/: f01r_render_progress.json  f01r_render_report.json
output-evo-deep-preview/: f01r_render_progress.json  f01r_render_report.json
output-evo-preview/: f01r_render_progress.json  f01r_render_report.json
output-layout-check/: f01r.json  f01r.xml  f01v.json  f01v.xml  f02r.json  f02r.xml  f02v.json  f02v.xml  f03r.json  f03r.xml  f03v.json  f03v.xml  f04r.json  f04r.xml  f04v.json  f04v.xml  f05r.json  f05r.xml  f05v.json  f05v.xml  f06r.json  f06r.xml  f06v.json  f06v.xml  f07r.json  f07r.xml  f07v.json  f07v.xml  f08r.json  f08r.xml  f08v.json  f08v.xml  f09r.json  f09r.xml  f09v.json  f09v.xml  f10r.json  f10r.xml  f10v.json  f10v.xml  (+73 more)
output-live/: f01r.json  f01r.xml  f01v.json  f01v.xml  f02r.json  f02r.xml  f02v.json  f02v.xml  f03r.json  f03r.xml  f03v.json  f03v.xml  f04r.json  f04r.xml  f04v.json  f04v.xml  f05r.json  f05r.xml  f05v.json  f05v.xml  f06r.json  f06r.xml  f06v.json  f06v.xml  f07r.json  f07r.xml  f07v.json  f07v.xml  f08r.json  (+144 more)
(+682 files in other folders)
